@@ -55,29 +55,29 @@ var IMLibElement = {
         if (curTarget != null && curTarget.length > 0) { //target is specified
             if (curTarget.charAt(0) == '#') { // Appending
                 //if (element.getAttribute('data-im-element') !== 'processed') {
-                    curTarget = curTarget.substring(1);
-                    if (curTarget == 'innerHTML') {
-                        if (INTERMediator.isIE && nodeTag == 'TEXTAREA') {
-                            curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r").replace(/\r/g, "<br>");
-                        }
-                        element.innerHTML += curVal;
-                    } else if (curTarget == 'textNode' || curTarget == 'script') {
-                        textNode = document.createTextNode(curVal);
-                        if (nodeTag == 'TEXTAREA') {
-                            curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r");
-                        }
-                        element.appendChild(textNode);
-                    } else if (curTarget.indexOf('style.') == 0) {
-                        styleName = curTarget.substring(6, curTarget.length);
-                        element.style[styleName] = curVal;
-                    } else {
-                        currentValue = element.getAttribute(curTarget);
-                        if (curVal.indexOf('/fmi/xml/cnt/') === 0 && currentValue.indexOf('?media=') === -1) {
-                            curVal = INTERMediatorOnPage.getEntryPath() + '?media=' + curVal;
-                        }
-                        element.setAttribute(curTarget, currentValue + curVal);
+                curTarget = curTarget.substring(1);
+                if (curTarget == 'innerHTML') {
+                    if (INTERMediator.isIE && nodeTag == 'TEXTAREA') {
+                        curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r").replace(/\r/g, "<br>");
                     }
-                    isReplaceOrAppned = true;
+                    element.innerHTML += curVal;
+                } else if (curTarget == 'textNode' || curTarget == 'script') {
+                    textNode = document.createTextNode(curVal);
+                    if (nodeTag == 'TEXTAREA') {
+                        curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r");
+                    }
+                    element.appendChild(textNode);
+                } else if (curTarget.indexOf('style.') == 0) {
+                    styleName = curTarget.substring(6, curTarget.length);
+                    element.style[styleName] = curVal;
+                } else {
+                    currentValue = element.getAttribute(curTarget);
+                    if (curVal.indexOf('/fmi/xml/cnt/') === 0 && currentValue.indexOf('?media=') === -1) {
+                        curVal = INTERMediatorOnPage.getEntryPath() + '?media=' + curVal;
+                    }
+                    element.setAttribute(curTarget, currentValue + curVal);
+                }
+                isReplaceOrAppned = true;
                 //}
             } else if (curTarget.charAt(0) == '$') { // Replacing
                 curTarget = curTarget.substring(1);
@@ -169,23 +169,24 @@ var IMLibElement = {
             } else if (nodeTag == 'SELECT') {
                 needPostValueSet = true;
                 element.value = curVal;
-            } else { // include option tag node
+            } else if (nodeTag == 'TEXTAREA') {
                 if (INTERMediator.defaultTargetInnerHTML) {
-                    if (INTERMediator.isIE && nodeTag == 'TEXTAREA') {
+                    if (INTERMediator.isIE) {
                         curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r").replace(/\r/g, "<br/>");
                     }
                     element.innerHTML = curVal;
                 } else {
-                    if (nodeTag == 'TEXTAREA' && curVal.length > 0) {
-                        if (INTERMediator.isTrident && INTERMediator.ieVersion >= 11) {
-                            // for IE11
-                            curVal = curVal.replace(/\r\n/g, IMLib.nl_char).replace(/\r/g, IMLib.nl_char);
-                        } else {
-                            curVal = curVal.replace(/\r\n/g, "\r").replace(/\n/g, "\r");
-                        }
+                    if (curVal.length > 0 && INTERMediator.isTrident && INTERMediator.ieVersion >= 11) {
+                        // for IE11
+                        curVal = curVal.replace(/\r\n/g, IMLib.nl_char).replace(/\r/g, IMLib.nl_char);
                     }
-                    textNode = document.createTextNode(curVal);
-                    element.appendChild(textNode);
+                    element.value = curVal;
+                }
+            } else { // include option and button tag node
+                if (INTERMediator.defaultTargetInnerHTML) {
+                    element.innerHTML = curVal;
+                } else {
+                    element.appendChild(document.createTextNode(curVal));
                 }
             }
         }
