@@ -1,1 +1,1 @@
-{"version":"5.5-RC2","releasedate":"2016-10-09"}
+{"version":"5.5-RC2","releasedate":"2016-10-10"}
